--- a/styles/main.css
+++ b/styles/main.css
@@ -280,7 +280,7 @@ nav li a {
 }
 
 nav li a:hover {
-  font-weight: 500;
+  font-weight: 300;
   cursor: pointer;
   color: #000000;
 }
